// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2xl Title 1`] = `
<h1
  className="pf-c-title pf-m-2xl"
  data-ouia-component-id="OUIA-Generated-Title-4"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe={true}
>
  2xl
   Title
</h1>
`;

exports[`3xl Title 1`] = `
<h1
  className="pf-c-title pf-m-3xl"
  data-ouia-component-id="OUIA-Generated-Title-5"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe={true}
>
  3xl
   Title
</h1>
`;

exports[`4xl Title 1`] = `
<h1
  className="pf-c-title pf-m-4xl"
  data-ouia-component-id="OUIA-Generated-Title-6"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe={true}
>
  4xl
   Title
</h1>
`;

exports[`lg Title 1`] = `
<h1
  className="pf-c-title pf-m-lg"
  data-ouia-component-id="OUIA-Generated-Title-2"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe={true}
>
  lg
   Title
</h1>
`;

exports[`md Title 1`] = `
<h1
  className="pf-c-title pf-m-md"
  data-ouia-component-id="OUIA-Generated-Title-1"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe={true}
>
  md
   Title
</h1>
`;

exports[`xl Title 1`] = `
<h1
  className="pf-c-title pf-m-xl"
  data-ouia-component-id="OUIA-Generated-Title-3"
  data-ouia-component-type="PF4/Title"
  data-ouia-safe={true}
>
  xl
   Title
</h1>
`;
